gac_sb/objects/AppATetablissement__c.object
<CustomObject>
    <description>APPLICATION AT</description>
    <fields>
        <fullName>AlsaceMoselle__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Alsace Moselle ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CodeRisque__c</fullName>
        <label>Code risque</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_postal__c</fullName>
        <label>Code postal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_unique__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>permet de vérifier qu&apos;il n&apos;y a qu&apos;un seul établissement principal par code risque</description>
        <label>Code unique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Entite__c</fullName>
        <label>Entité</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Etablissement_principal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>utilisé pour le bâtiment et l&apos;Alsace Moselle</description>
        <label>Etablissement principal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mission__c</fullName>
        <label>Mission</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Mission__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>TAT</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Mission__c</referenceTo>
        <relationshipLabel>Etablissements</relationshipLabel>
        <relationshipName>EtablissementsConcernes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>NGAC__c</fullName>
        <formula>Mission__r.Contrat__r.Numero_de_dossier_GAC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>N° de dossier GAC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pays__c</fullName>
        <label>Pays</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rue__c</fullName>
        <label>Rue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIRET__c</fullName>
        <label>SIRET</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ville__c</fullName>
        <label>Ville</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Etablissement</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Tout</label>
    </listViews>
    <nameField>
        <label>Nom de l&apos;Etablissement</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Etablissements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>